--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,8 @@ webrick:
 ## Global Variables
 email: "shreyas.belv@gmail.com"
 github: "shreybs/"
+twitter: "heavyStarList"
+linkedin: "shreyas-vittal-220561166"
 
 statement: "There Is No Spoon."
 # default max toc levels: 1 - 6 (h1 - h6)
